--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
 </head>
 <body>
 <div class="grid"><ul class="grid__item"></ul></div>
-<script src="public/index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
